--- a/WindowsForms/WindowsForms.csproj
+++ b/WindowsForms/WindowsForms.csproj
@@ -86,12 +86,21 @@
     <Compile Include="Auth_Registr.Designer.cs">
       <DependentUpon>Auth_Registr.cs</DependentUpon>
     </Compile>
+    <Compile Include="Catalog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Catalog.Designer.cs">
+      <DependentUpon>Catalog.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositorys\Auth_Reposirtory.cs" />
     <Compile Include="Repositorys\IAuth_Repository.cs" />
     <EmbeddedResource Include="Auth_Registr.resx">
       <DependentUpon>Auth_Registr.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Catalog.resx">
+      <DependentUpon>Catalog.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
