Миграция на .net 9

--- a/API/API.csproj
+++ b/API/API.csproj
@@ -1,23 +1,22 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
+    <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Classes\Classes\Classes.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.Data.SqlClient" Version="6.0.2" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
-    <PackageReference Include="System.Data.SqlClient" Version="4.9.0" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Middleware\" />
-    <Folder Include="images\" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Classes\Classes.csproj" />
+    <Folder Include="Image\" />
   </ItemGroup>
 
 </Project>
